# CRAWLGPT

./: .dockerignore  .gitignore  Dockerfile  README.md  README_hf.md  config.py  pyproject.toml  pytest.ini  requirements.txt  setup_env.py  test_crawlgpt_api.py
.github/workflows/: Push_to_hf.yaml
Docs/: MiniDoc.md
core/: DatabaseHandler.py  LLMBasedCrawler.py  SummaryGenerator.py
src/crawlgpt/core/: DatabaseHandler.py  LLMBasedCrawler.py  SummaryGenerator.py  database.py
src/crawlgpt/ui/: app.py  chat_app.py  chat_ui.py  login.py  run.py
src/crawlgpt/utils/: content_validator.py  data_manager.py  helper_functions.py  monitoring.py  progress.py
tests/: test_database_handler.py  test_integration.py  test_llm_based_crawler.py  test_summary_generator.py
tests/test_core/: test_database_handler.py  test_integration.py  test_llm_based_crawler.py  test_summary_generator.py
ui/: chat_app.py  chat_ui.py
utils/: __init__.py  content_validator.py  data_manager.py  monitoring.py  progress.py
